# dblp-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LM_STUDIO.md  OPERATIONS.md  QUICKSTART.md  RELEASE.md
src/dblp_mcp/: __init__.py  cli.py  config.py  database.py  diagnostics.py  downloader.py  importer.py  models.py  runtime.py  search.py  server.py  text.py
src/dblp_mcp/abstracts/: __init__.py  base.py  registry.py  service.py
src/dblp_mcp/abstracts/providers/: __init__.py  arxiv.py  openalex.py
src/dblp_mcp/fulltext/: __init__.py  base.py  extract.py  registry.py  service.py  storage.py
src/dblp_mcp/fulltext/providers/: acm.py  arxiv.py  ieee.py  openalex.py
tests/: test_abstracts.py  test_diagnostics.py  test_downloader_extract.py  test_fulltext.py  test_importer.py  test_runtime_cli.py  test_server.py
